[TRANSLATIONS] * add some missing strings and fix existing * add more strings from playerclasses.xml (not used yet) * update ukrainian translation

--- a/translation/de/tutorial.po
+++ b/translation/de/tutorial.po
@@ -840,6 +840,10 @@ msgstr ""
 "ihr auch, wie ihr diese Kraft in vernünftige Fähigkeiten umwandelt?"
 
 #: tutorial.xml
+msgid "Explain level up?"
+msgstr "Levelup erklären?"
+
+#: tutorial.xml
 msgid "Explain level up"
 msgstr "Levelup erklären"
 
