--- a/translation/uk/the_besieged_farm.po
+++ b/translation/uk/the_besieged_farm.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2011-09-11 17:17+0300\n"
 "Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
 "Language-Team: german\n"
 "Language: Ukrainian\n"
@@ -90,7 +90,7 @@ msgid ""
 "You know the drill: Get to the Northern Meadow and drive away the goblins "
 "around Bron's farm."
 msgstr ""
-"Ви в курсі: Добратися до Північного Лугу і відігнати гоблінів від ферми Брона."
+"Ви в курсі: Добратися до Північного лугу і відігнати гоблінів від ферми Брона."
 
 #: besieged_farm.xml
 msgid "I don't care how you do it, even if you gobble them raw."
@@ -116,7 +116,7 @@ msgstr "Північний луг"
 msgid ""
 "That should have been enough goblins. I better look after Bron's family."
 msgstr ""
-"Повинно бути досить. Я краще пригляну за сім'єю Брона."
+"Повинно бути досить. Я краще гляну як там сім'я Брона."
 
 #: besieged_farm.xml
 msgid "The goblins are gone. Are you alright?"
