--- a/translation/uk/menu.po
+++ b/translation/uk/menu.po
@@ -243,6 +243,14 @@ msgstr "Створити"
 msgid "Base damage"
 msgstr "Базова шкода"
 
+#: ../src/gui/charinfo.cpp:325
+msgid "You have"
+msgstr "У вас"
+
+#: ../src/gui/charinfo.cpp:325
+msgid "attribute points to spend"
+msgstr "невикористаних очків атрибутів"
+
 #: ../src/gui/charinfo.cpp:569
 msgid "Damage dealt by "
 msgstr "Пошкодження, що наносяться від "
@@ -258,6 +266,22 @@ msgstr "Ухилитись"
 #: ../src/gui/charinfo.cpp:622
 msgid "Chance to get hit by "
 msgstr "Шанс постраждати від "
+
+#: ../src/gui/charinfo.cpp:642
+msgid "Player info"
+msgstr "Інформація"
+
+#: ../src/gui/charinfo.cpp:645
+msgid "Attributes"
+msgstr "Характеристика"
+
+#: ../src/gui/charinfo.cpp:648
+msgid "Offense"
+msgstr "Напад"
+
+#: ../src/gui/charinfo.cpp:651
+msgid "Defense"
+msgstr "Захист"
 
 #: ../src/gui/charinfo.cpp:713
 msgid "Damage dealt to  "
@@ -412,6 +436,18 @@ msgstr "Кредити"
 #: ../src/gui/mainmenu.cpp:147
 msgid "Quit"
 msgstr "Вихід"
+
+#: ../src/gui/mainmenu.cpp:632
+msgid "Really delete savegame?"
+msgstr "Стерти збережену гру?"
+
+#: ../src/gui/mainmenu.cpp:632
+msgid "Yes"
+msgstr "Так"
+
+#: ../src/gui/mainmenu.cpp:632
+msgid "No"
+msgstr "Ні"
 
 #: ../src/gui/messageboxes.cpp:52 ../src/gui/messageboxes.cpp:198
 #: ../src/gui/networkwindows.cpp:95 ../src/gui/networkwindows.cpp:223
