Commit from Sumwars Pootle  by user fusion44.: 112 of 151 messages translated (1 fuzzy)

--- a/translation/de/menu.po
+++ b/translation/de/menu.po
@@ -201,7 +201,7 @@ msgstr "Angelegt:"
 
 #: ../src/gui/itemwindow.cpp:191
 msgid "Equipped (secondary):\n"
-msgstr ""
+msgstr "Angelegt (Offhand):\n"
 
 #: ../src/gui/itemwindow.cpp:216
 msgid "Equipped (left):\n"
