--- a/translation/de/menu.po
+++ b/translation/de/menu.po
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-09-12 21:30+0200\n"
-"PO-Revision-Date: 2011-05-19 12:02+0200\n"
-"Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
+"PO-Revision-Date: 2011-09-25 14:43+0200\n"
+"Last-Translator: Stefan <some.fusion@gmail.com>\n"
 "Language-Team: german <de@sumwars>\n"
-"Language: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: ../src/core/damage.cpp:143 ../src/gui/charinfo.cpp:930
 msgid "Physical"
@@ -205,11 +206,11 @@ msgstr "Angelegt (Offhand):\n"
 
 #: ../src/gui/itemwindow.cpp:216
 msgid "Equipped (left):\n"
-msgstr ""
+msgstr "Angelegt (links):\n"
 
 #: ../src/gui/itemwindow.cpp:217
 msgid "Equipped (right):\n"
-msgstr ""
+msgstr "Angelegt (rechts):\n"
 
 #: ../src/gui/itemwindow.cpp:256
 msgid "Hovered:\n"
