--- a/translation/uk/rob_the_robber.po
+++ b/translation/uk/rob_the_robber.po
@@ -39,7 +39,7 @@ msgid ""
 msgstr ""
 "Роб розбійник помер, і незабаром буде забутий. У мене є його намисто і я "
 "прямую до Дорфенваля щоб показати його сержанту Воберу. Я поняття не маю, "
-"чому всі так боявлися цього хлопця."
+"чому всі так боялися цього хлопця."
 
 #: rob_the_robber.xml
 msgid ""
@@ -47,8 +47,8 @@ msgid ""
 "dispose of him and take his neckband. At least it spares me the unsavory "
 "task of carrying a head around."
 msgstr ""
-"Роб розбійник нібито ховається в глибині Казкового лісу. Знайди його, "
-"позбався від нього і забери його намисто. Принаймні це вбереже мене від "
+"Роб розбійник нібито ховається в глибині Казкового лісу. Знайти його, "
+"позбутись від нього і забрати його намисто. Принаймні це вбереже мене від "
 "противного завдання нести з собою голову."
 
 #: rob_the_robber.xml
@@ -57,7 +57,7 @@ msgstr "Сержант Люттерер"
 
 #: rob_the_robber.xml
 msgid "Wanted poster"
-msgstr "Потрібний плакат"
+msgstr "Оголошення про розшук"
 
 #: rob_the_robber.xml
 msgid ""
@@ -70,7 +70,7 @@ msgstr "Слідкуй за собою."
 
 #: rob_the_robber.xml
 msgid "Excuse me, sergeant, but I noticed this wanted poster."
-msgstr "Вибачте, сержанте, але я помітив цей потрібний плакат."
+msgstr "Вибачте, сержанте, я помітив це оголошення про розшук."
 
 #: rob_the_robber.xml
 msgid ""
