--- a/translation/uk/testquest.po
+++ b/translation/uk/testquest.po
@@ -135,3 +135,14 @@ msgstr "і ще одна Перевірка"
 msgid "again a test"
 msgstr "знову тест"
 
+#: testquest.xml
+msgid "i am the first guard"
+msgstr "я перший охоронець"
+
+#: testquest.xml
+msgid "i am the second guard"
+msgstr "я другий охоронець"
+
+#: testquest.xml
+msgid "i am Fenor Marken"
+msgstr "а я Фенор Маркен"
